objects/chargebeeapps__CB_Sites__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Auto_subscription_handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto subscription handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Create_Renewal_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Renewal Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Custom_Field_Mapping__c</fullName>
        <label>Custom Field Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount_Calculation__c</fullName>
        <label>Discount Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPLY_RECURRING_ONLY</fullName>
                </value>
                <value>
                    <fullName>APPLY_RECURRING_AND_NON_RECURRING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice_Immediately__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Invoice Immediately</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Site</label>
    <nameField>
        <label>CB Sites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>